# probablity_bot

./: .env  .env.example  Dockerfile  LICENSE  README.md  app.py  create_database.py  docker-compose.yml  pyproject.toml  setup.py
app/: config.py
app/database/: __init__.py  db_init.py  models.py
app/database/models/: __init__.py  base.py  book.py  exercises.py  paragraphs.py  sections.py  selected_paragraphs.py  selected_sections.py  solutions.py  solved_exercises.py  tables.py  users.py
app/database/queries/: __init__.py  db_populate.py  queries.py  table_populate.py  utils.py
app/database/quieries/: __init__.py  cache.py  database_init.py  database_populate.py  db_init.py  db_populate.py  queries.py  table_populate.py  utils.py
app/parsers/: __init__.py  elements.py  exercise.py  paragraph.py  parsers.py  section.py  subsection.py  utils.py
app/telegram_bot/: __init__.py
app/telegram_bot/handlers/: __init__.py  commands.py  messages.py  utils.py
app/telegram_bot/handlers/callbacks/: __init__.py  select.py
app/telegram_bot/handlers/commands/: __init__.py  challenge.py  help.py  leaderboard.py  remove.py  score.py  select.py  solution.py  start.py
app/utils/: __init__.py  image_converter.py  logging_config.py  logging_config.yml
data/: element_types.json  sections.json
database/: config.py  main.py  models.py  parse_markdown.py  parsers.py
docker/: .env  entrypoint.sh
models/: models.py
notebooks/: connections.ipynb  gemini.ipynb  parse.ipynb  parse_solutions.ipynb
scripts/: pdf2md.py  pdf2md_solutions.py
(+6 files in other folders)
