[project]
name = "telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dogpile-cache>=1.5.0",
    "dotenv>=0.9.9",
    "google-genai>=1.52.0",
    "pandas>=2.3.3",
    "pylint>=4.0.3",
    "python-telegram-bot>=22.5",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
]
